# SpaZK

./: Cargo.toml  README.md  rustfmt.toml
gkr/: Cargo.toml
gkr/examples/: logup.rs  normal_matrix.rs  normal_matrix_circuit.rs  normal_matrix_libra_circuit.rs  ternary_matrix.rs  ternary_matrix_circuit.rs
gkr/src/: circuit.rs  lib.rs  logup.rs  scheme.rs
gkr/src/logup/: prover.rs  verifier.rs
gkr/src/scheme/: prover.rs  verifier.rs
pcs/: Cargo.toml
pcs/benches/: hyperkzg.rs  hyrax.rs  zeromorph.rs
pcs/examples/: normal_matrix.rs  ternary_matrix.rs
pcs/src/: bench_templates.rs  commitment.rs  field.rs  lib.rs  macros.rs  poly.rs  utils.rs
pcs/src/commitment/: commitment_scheme.rs  hyperkzg.rs  hyrax.rs  kzg.rs  mock.rs  pedersen.rs  zeromorph.rs
pcs/src/field/: ark.rs
pcs/src/poly/: dense.rs  eq_poly.rs  identity_poly.rs  sparse.rs  ternary_sparse.rs  unipoly.rs
pcs/src/utils/: instruction_utils.rs  msm.rs  thread.rs  transcript.rs
scripts/: bench_info.py  parse_zkml.py  pcs_info.py  run_benches.sh  sc_info.py  zkml.py
sumcheck/: Cargo.toml
sumcheck/benches/: sumcheck_prover.rs
sumcheck/src/: data_structures.rs  lib.rs  protocol.rs  rng.rs  test.rs
sumcheck/src/protocol/: prover.rs  verifier.rs
zkml/: Cargo.toml
zkml/examples/: zkml.rs
zkml/src/: error.rs  layers.rs  lib.rs  lookup.rs  model.rs  tensor.rs
zkml/src/layers/: linear.rs  relu.rs  sparse_linear.rs  ternary_sparse_linear.rs
