[workspace]

members = ["gkr", "pcs", "sumcheck", "zkml"]

[workspace.dependencies]
ark-ff = { version = "0.4.2", default-features = false }
ark-poly = { version = "0.4.2", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-poly-commit = { version = "0.4.0", default-features = false }
ark-bn254 = "0.4.0"
ark-ec = { version = "0.4.2", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
thiserror = "1.0.63"
tracing = "0.1.40"

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
