[package]
name = "pcs"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
criterion = "0.5.1"
itertools = "0.13.0"
lazy_static = "1.5.0"
memory-stats = "1.2.0"
num-integer = "0.1.46"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rayon = { version = "1.10.0", optional = true }
serde = "1.0.204"
sha3 = "0.10.8"
thiserror = "1.0.63"
tracing = "0.1.40"

[features]
default = ["std"]
parallel = [
    "std",
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "rayon",
]
std = [
    "ark-bn254/std",
    "ark-ec/std",
    "ark-ff/std",
    "ark-poly/std",
    "ark-serialize/std",
    "ark-std/std",
]

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "hyperkzg"
harness = false

[[bench]]
name = "hyrax"
harness = false

[[bench]]
name = "zeromorph"
harness = false
