[package]
name = "zkml"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.4.0"
ark-std.workspace = true
gkr = { version = "0.1.0", path = "../gkr" }
itertools = "0.13.0"
num-traits = "0.2.19"
pcs = { version = "0.1.0", path = "../pcs" }
rand = "0.8.5"
rayon = "1.10.0"
serde = "1.0.210"
serde_json = "1.0.128"
sumcheck = { version = "0.1.0", path = "../sumcheck" }
thiserror.workspace = true
tract-onnx = "0.21.7"

[features]
default = ["std"]
parallel = ["std"]
std = ["pcs/std"]
